--- a/style.css
+++ b/style.css
@@ -191,3 +191,14 @@ h2{
     transform: rotate(1800deg);
   }
 }
+
+@media only screen and (min-width: 1000px) {
+  iframe {
+    width: 360px;
+height: 720px;
+  }
+
+.aruu{
+max-width: auto;
+}
+}
