--- a/style.css
+++ b/style.css
@@ -192,7 +192,7 @@ h2{
   }
 }
 
-@media only screen and (min-width: 1000px) {
+@media only screen and (max-width: 1000px) {
   iframe {
     width: 360px;
 height: 720px;
