--- a/style.css
+++ b/style.css
@@ -192,13 +192,17 @@ h2{
   }
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (min-width: 1000px) {
   iframe {
-    width: 360px;
-height: 720px;
+    width: 720px;
+height: 360px;
   }
 
 .aruu{
-max-width: auto;
+
+	overflow-wrap: break-word;
+	max-width: initial;
+	white-space:pre-wrap;
+	overflow: hidden;
 }
 }
