--- a/style.css
+++ b/style.css
@@ -134,6 +134,7 @@ box shadow: 0 0 10px 8px rgba(0,0,0,0.8);
 	height: auto;
 	border: none;
 	padding: 0;
+ background: none;
 	box-shadow: 0 0 0 999999px #111;
 }
 
@@ -156,6 +157,7 @@ box shadow: 0 0 10px 8px rgba(0,0,0,0.8);
 	position: fixed;
 	height: 20px;
 	width: 5%;
+background: none;
 	z-index: 999999;
 	font-weight: bold;
 	margin: -20px;
