--- a/style.css
+++ b/style.css
@@ -123,6 +123,12 @@ z-index: 99;
 box shadow: 0 0 10px 8px rgba(0,0,0,0.8);
 }
 
+.footer img{
+position: relative;
+z-index: 99;
+box shadow: 0 0 10px 8px rgba(0,0,0,0.8);
+}
+
 
 .loading-div{
 	position: relative;
